fix: css glownych komponentow, bo sie scrollbary krzaczyly :D

--- a/src/assets/app.css
+++ b/src/assets/app.css
@@ -19,7 +19,14 @@
 
 html{
     overflow-x: hidden;
+    overflow-y: auto;
     scrollbar-width: thin;
+    background-image: url("@/assets/img/background.png");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-attachment: fixed;
+
 }
 
 .container {
@@ -29,14 +36,10 @@ html{
     align-items: center;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-    background-image: url("@/assets/img/background.png");
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center center;
-    background-attachment: fixed;
-    position: relative;
-    min-height: 100vh;
+    position: center;
     width: 100vw;
+    scrollbar-width: thin;
+    padding-bottom: 80px;
 }
 
 @media screen and (max-width: 600px){
@@ -76,7 +79,7 @@ html{
     background-color: rgba(255, 255, 255, 0.5);
     margin: .5em 0;
     padding: .5rem 1rem .5rem 1rem;
-    height:fit-content;
+    height: fit-content;
 }
 
 .flex-row{
